<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/white"
        app:title="@string/sign_up"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        android:background="@color/my_light_primary"
        app:layout_constraintBaseline_toBottomOf="@id/main"/>

    <View
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/my_light_primary"
        app:layout_constraintTop_toBottomOf="@id/toolbar_register"
        app:layout_constraintStart_toStartOf="parent"/>



    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/tennis_court_description"
        android:scaleType="centerCrop"
        android:src="@mipmap/login_logo_bet"
        app:layout_constraintTop_toBottomOf="@id/imageView1" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="26dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="#333"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/imageView2" />

    <LinearLayout
        android:id="@+id/main2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="26dp"
        app:layout_constraintTop_toBottomOf="@id/text">


        <LinearLayout
            android:id="@+id/username_bg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_et_bg"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/main2">


            <ImageView
                android:id="@+id/username_logo"
                android:padding="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/sign"
                android:src="@drawable/baseline_account_box_24" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="username"
                android:hint="@string/Username"
                android:inputType="text"
                android:background="@null"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/password_bg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_et_bg"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/main2">


            <ImageView
                android:id="@+id/password_logo"
                android:padding="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/sign"
                android:src="@drawable/baseline_lock_24" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="textPassword"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@null"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_bg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_et_bg"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/main2">


            <ImageView
                android:id="@+id/email_logo"
                android:padding="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/e_mail"
                android:src="@drawable/baseline_email_24" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="text"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:background="@null"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/phone_bg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_et_bg"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/main2">


            <ImageView
                android:id="@+id/phone_logo"
                android:padding="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/e_mail"
                android:src="@drawable/baseline_smartphone_24" />

            <EditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="text"
                android:hint="@string/phone_number"
                android:inputType="text|phone"
                android:background="@null"/>

        </LinearLayout>



        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="50dp"
            android:text="@string/sign_up"/>




    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>