<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <View
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/my_light_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/tennis_court_description"
        android:scaleType="centerCrop"
        android:src="@mipmap/login_logo_bet"
        app:layout_constraintTop_toBottomOf="@id/imageView1"
        app:layout_constraintStart_toStartOf="@id/imageView1"
        app:layout_constraintEnd_toEndOf="@id/imageView1" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="26dp"
        android:gravity="center"
        android:text="@string/SIGN"
        android:textColor="#333"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/imageView2" />

    <LinearLayout
        android:id="@+id/main2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="26dp"
        app:layout_constraintTop_toBottomOf="@id/text">


        <LinearLayout
            android:id="@+id/username_bg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_et_bg"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/main2">


            <ImageView
                android:id="@+id/username_logo"
                android:padding="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/sign"
                android:src="@drawable/baseline_person_24" />

            <EditText
                android:id="@+id/etMemberName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="username"
                android:hint="Member Name"
                android:inputType="text"
                android:background="@null"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/password_bg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/login_et_bg"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/main2">


            <ImageView
                android:id="@+id/password_logo"
                android:padding="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/sign"
                android:src="@drawable/baseline_lock_24" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="textPassword"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@null"/>

        </LinearLayout>
        
        <TextView
            android:id="@+id/bt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="end"
            android:textColor="@color/my_light_primary"
            android:text="@string/sign_up"/>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="50dp"
            android:text="@string/login"/>




    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>